# dcs-command-palette

./: .gitignore  CHANGELOG-v0.3.0.md  CHANGELOG-v0.4.0.md  CHANGELOG-v0.5.0.md  CHANGELOG-v0.6.0.md  CHANGELOG-v1.0.0.md  LICENSE  README.md  bios_state.py  build_exe.py  build_installer.py  commands.py  config.py  config_window.py  controls.py  dcs_bios.py  dcs_command_palette_export.lua  install.py  joystick_reader.py  key_sender.py  keyboard_commands.py  logging_config.py  main.py  overlay.py  pyproject.toml  search.py  setup.py  usage_tracker.py
src/: detection.py  main.py
src/bios/: controls.py  installer.py  sender.py  state.py
src/config/: settings.py  window.py
src/installer/: wizard.py
src/lib/: joystick.py  key_sender.py  keyboard.py  logging_setup.py  search.py
src/lua/: dcs_command_palette_hook.lua
src/palette/: commands.py  overlay.py  usage.py
src/vr/: __init__.py  detection.py  server.py
src/vr/static/: app.css  app.js  index.html
tests/: test_controls.py  test_dcs_bios.py  test_hotkey.py  test_keyboard_commands.py  test_search.py  test_setup.py  test_smoke.py  test_typecheck.py  test_usage_tracker.py
