[project]
name = "dcs-command-palette"
version = "0.5.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.0",
    "pynput>=1.8.1",
    "pyqt6>=6.10.2",
    "rapidfuzz>=3.13.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = ["."]

[[tool.mypy.overrides]]
module = ["pynput.*", "PyQt6.*", "pygame.*"]
ignore_missing_imports = true
