[project]
name = "dcs-command-palette"
version = "1.2.1"
description = "VS Code-style command palette overlay for DCS World with fuzzy search and DCS-BIOS integration"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Juan Jose Alvarez Martinez", email = "juanjo@juanjoalvarez.net" },
]
keywords = ["dcs", "dcs-world", "command-palette", "dcs-bios", "overlay"]
dependencies = [
    "pygame>=2.6.0",
    "pynput>=1.8.1",
    "pyqt6>=6.10.2",
    "rapidfuzz>=3.13.0",
]

[project.urls]
Homepage = "https://github.com/juanjux/dcs-command-palette"
Repository = "https://github.com/juanjux/dcs-command-palette"
Issues = "https://github.com/juanjux/dcs-command-palette/issues"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = ["."]

[[tool.mypy.overrides]]
module = ["pynput.*", "PyQt6.*", "pygame.*"]
ignore_missing_imports = true
